tests/baselines/reference/staticsInAFunction.errors.txt
tests/cases/compiler/staticsInAFunction.ts(1,13): error TS1005: '(' expected.
tests/cases/compiler/staticsInAFunction.ts(2,4): error TS1128: Declaration or statement expected.
tests/cases/compiler/staticsInAFunction.ts(2,11): error TS2304: Cannot find name 'test'.
tests/cases/compiler/staticsInAFunction.ts(3,4): error TS1128: Declaration or statement expected.
tests/cases/compiler/staticsInAFunction.ts(3,11): error TS2304: Cannot find name 'test'.
tests/cases/compiler/staticsInAFunction.ts(3,16): error TS2304: Cannot find name 'name'.
tests/cases/compiler/staticsInAFunction.ts(3,20): error TS1005: ',' expected.
tests/cases/compiler/staticsInAFunction.ts(3,21): error TS2552: Cannot find name 'string'. Did you mean 'String'?
tests/cases/compiler/staticsInAFunction.ts(4,4): error TS1128: Declaration or statement expected.
tests/cases/compiler/staticsInAFunction.ts(4,11): error TS2304: Cannot find name 'test'.
tests/cases/compiler/staticsInAFunction.ts(4,16): error TS2304: Cannot find name 'name'.
tests/cases/compiler/staticsInAFunction.ts(4,21): error TS1109: Expression expected.
tests/cases/compiler/staticsInAFunction.ts(4,22): error TS2552: Cannot find name 'any'. Did you mean 'NaN'?
tests/cases/compiler/staticsInAFunction.ts(4,26): error TS1005: ';' expected.


==== tests/cases/compiler/staticsInAFunction.ts (14 errors) ====
    function boo{
                ~
!!! error TS1005: '(' expected.
       static test()
       ~~~~~~
!!! error TS1128: Declaration or statement expected.
              ~~~~
!!! error TS2304: Cannot find name 'test'.
       static test(name:string)
       ~~~~~~
!!! error TS1128: Declaration or statement expected.
              ~~~~
!!! error TS2304: Cannot find name 'test'.
                   ~~~~
!!! error TS2304: Cannot find name 'name'.
                       ~
!!! error TS1005: ',' expected.
                        ~~~~~~
!!! error TS2552: Cannot find name 'string'. Did you mean 'String'?
       static test(name?:any){}
       ~~~~~~
!!! error TS1128: Declaration or statement expected.
              ~~~~
!!! error TS2304: Cannot find name 'test'.
                   ~~~~
!!! error TS2304: Cannot find name 'name'.
                        ~
!!! error TS1109: Expression expected.
                         ~~~
!!! error TS2552: Cannot find name 'any'. Did you mean 'NaN'?
                             ~
!!! error TS1005: ';' expected.
    }
    